# flightsim

./: Cargo.toml  README.md
assets/plane/: body.frag  plane.frag  plane.vert  propeller.vert
assets/skybox/: skybox.frag  skybox.vert
assets/surface/: surface.frag  surface.vert
assets/water/: water.frag  water.vert
src/: asset_manager.rs  camera.rs  entity.rs  helper.rs  input_handler.rs  main.rs  mesh.rs  mesh_factory.rs  model.rs  plane.rs  water.rs  window_handler.rs  world.rs
src/IO/: adhrs_listener.rs  adhrs_serial_listener.rs  adhrs_tcp_listener.rs
src/asset_manager/: load_image.rs
