[package]
name = "flightsim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.28.0"
glow = "0.11.2"
cgmath = { version = "0.18.0", features = ["swizzle"] }
image = "0.24.0"
obj-rs = "0.7.0"
imagesize = "0.9.0"
glow_glyph = "0.5.1"

[profile.dev]
opt-level = 3
